--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -17,7 +17,7 @@
           <a
             class="nav-link"
             routerLinkActive="active"
-            [routerLink]="['/citys']"
+            [routerLink]="['/search']"
           >
             Citys
           </a>
