--- a/src/app/citys/modalCityData/modalCityData.component.html
+++ b/src/app/citys/modalCityData/modalCityData.component.html
@@ -10,12 +10,33 @@
   </button>
 </div>
 <div class="modal-body">
-  <ul *ngIf="list.length">
-    <li *ngFor="let item of list">{{ item }}</li>
-  </ul>
+  <div style="overflow-x: scroll">
+    <table class="table table-striped" *ngIf="city">
+      <thead>
+        <tr>
+          <th scope="col">City</th>
+          <th scope="col">Country</th>
+          <th scope="col">Weather</th>
+          <th scope="col">Description</th>
+          <th scope="col">Temp (Celsius)</th>
+          <th scope="col">Speed wind</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>{{ city.name }}</td>
+          <td>{{ city.sys.country }}</td>
+          <td>{{ city.weather[0].main }}</td>
+          <td>{{ city.weather[0].description }}</td>
+          <td>{{ city.main.temp }}</td>
+          <td>{{ city.wind.speed }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">
-    {{ closeBtnName }}
+    Close
   </button>
 </div>
