--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -17,10 +17,18 @@
           <a
             class="nav-link"
             routerLinkActive="active"
-            [routerLink]="['/search']"
+            [routerLink]="['search']"
           >
             Citys
           </a>
+        </li>
+        <li>
+          <div>
+            <input type="text">
+            <button>
+              Find
+            </button>
+          </div>
         </li>
       </ul>
     </nav>
