--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -13,6 +13,17 @@
   <div class="sidebar">
     <nav class="sidebar-nav">
       <ul class="nav">
+        <li>
+          <div class="pt-2 pb-2">
+            <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm)">
+              <input type="text" formControlName="city" class="form-control" placeholder="Enter city name"/>
+              <div *ngIf="myForm.get('city').invalid && (myForm.get('city').dirty || myForm.get('city').touched)">
+                Please provide a valid city.
+              </div>
+              <button type="submit" class="btn btn-primary mt-1 w-100" [disabled]="myForm.invalid">Find</button>
+            </form>
+          </div>
+        </li>
         <li class="nav-item">
           <a
             class="nav-link"
@@ -21,14 +32,6 @@
           >
             Citys
           </a>
-        </li>
-        <li>
-          <div>
-            <input type="text">
-            <button>
-              Find
-            </button>
-          </div>
         </li>
       </ul>
     </nav>
