--- a/src/scss/_bootstrap-variables.scss
+++ b/src/scss/_bootstrap-variables.scss
@@ -10,7 +10,7 @@ $gray-light: #b0bec5;
 $gray-lighter: #cfd8dc;
 $gray-lightest: #eceff1;
 
-$brand-primary: #209dd8;
+$brand-primary: #0d6efd;
 $brand-success: #4dbd74;
 $brand-info: #63c2de;
 $brand-warning: #f8cb00;
