--- a/src/app/citys/citys.component.html
+++ b/src/app/citys/citys.component.html
@@ -8,33 +8,40 @@
         </div>
         <div class="card-block">
           <div class="row">
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th scope="col">Name</th>
-                  <th scope="col">Weather</th>
-                  <th scope="col">View</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngIf="citys">
-                  <th>{{ citys.name }}</th>
-                  <td>
-                    {{ citys.weather[0].description }}
-                    <div></div>
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn btn-primary"
-                      (click)="showModal()"
-                    >
-                      Ver
-                    </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <ng-container *ngIf="!citys">
+              <div class="text-center">
+                <span>No city selected</span>
+              </div>
+            </ng-container>
+            <ng-container *ngIf="citys">
+              <table class="table animated fadeIn">
+                <thead>
+                  <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Weather</th>
+                    <th scope="col">View</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngIf="citys">
+                    <th>{{ citys.name }}</th>
+                    <td>
+                      {{ citys.weather[0].description }}
+                      <div></div>
+                    </td>
+                    <td>
+                      <button
+                        type="button"
+                        class="btn btn-primary"
+                        (click)="showModal()"
+                      >
+                        Ver
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </ng-container>
           </div>
         </div>
       </div>
